Fix video green screen issue on mobile

--- a/styles.css
+++ b/styles.css
@@ -174,6 +174,8 @@ body {
   /* 1 */
   line-height: inherit;
   /* 2 */
+  background-color: black;
+  padding: 0;
 }
 
 /*
@@ -542,15 +544,18 @@ object {
 Constrain images and videos to the parent width and preserve their intrinsic aspect ratio. (https://github.com/mozdevs/cssremedy/issues/14)
 */
 
-img,
-video {
+img {
   max-width: 100%;
-  height: 100%;
-  width: 100%;
-  object-fit: cover;
+  height: auto;
+}
+
+#background-video {
   position: absolute;
   top: 0;
   left: 0;
+  width: 100vw;
+  height: 100vh;
+  object-fit: cover;
   z-index: -1;
 }
 
